[gd_scene load_steps=4 format=3 uid="uid://bx1nqexhx0mme"]

[ext_resource type="Script" path="res://scripts/ui_component/scoreboard.gd" id="1_f7ssi"]
[ext_resource type="FontFile" uid="uid://jcbtauc4b57x" path="res://resource/font/fusion-pixel-10px-monospaced-zh_hans.ttf" id="1_jiob3"]
[ext_resource type="Texture2D" uid="uid://ckcjk45jjwwgg" path="res://resource/img/button_empty.png" id="2_pmbam"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Scoreboard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7ssi")

[node name="ColorRect" type="ColorRect" parent="Scoreboard"]
layout_mode = 0
offset_left = 384.0
offset_top = 160.0
offset_right = 768.0
offset_bottom = 560.0
color = Color(0.959444, 0.971487, 0.932024, 1)

[node name="上矩形" type="ColorRect" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = -8.0
offset_top = -25.0
offset_right = 392.0
offset_bottom = 71.0
color = Color(0, 0.136214, 0.351823, 1)

[node name="文字_得分榜" type="Label" parent="Scoreboard/ColorRect/上矩形"]
layout_mode = 0
offset_left = 120.0
offset_top = 21.0
offset_right = 280.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 51
text = "得分榜"

[node name="表头" type="Label" parent="Scoreboard/ColorRect/上矩形"]
layout_mode = 0
offset_left = 24.0
offset_top = 97.0
offset_right = 392.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 23
text = "排名   用时   得分   留名"

[node name="文字_模式" type="Label" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = 48.0
offset_top = -115.0
offset_right = 332.0
offset_bottom = -27.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 71
text = "普通模式"

[node name="文字_本轮得分" type="Label" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = 432.0
offset_top = 45.0
offset_right = 716.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 71
text = "本轮得分"

[node name="分数" type="Label" parent="Scoreboard/ColorRect/文字_本轮得分"]
layout_mode = 0
offset_left = 64.0
offset_top = 83.0
offset_right = 242.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 71
text = "100"

[node name="文字_本轮用时" type="Label" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = -352.0
offset_top = 45.0
offset_right = -68.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 71
text = "本轮用时"

[node name="用时" type="Label" parent="Scoreboard/ColorRect/文字_本轮用时"]
layout_mode = 0
offset_left = 16.0
offset_top = 83.0
offset_right = 194.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 71
text = "6：02"

[node name="分数输入的下矩形" type="ColorRect" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = -56.0
offset_top = 333.0
offset_right = 464.0
offset_bottom = 445.0
color = Color(0.164706, 0.619608, 1, 1)

[node name="提示" type="Label" parent="Scoreboard/ColorRect/分数输入的下矩形"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 513.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 31
text = "请输入你的名字"

[node name="player_name_in" type="LineEdit" parent="Scoreboard/ColorRect/分数输入的下矩形"]
layout_mode = 0
offset_left = 248.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 21
text = "匿名"
placeholder_text = "匿名"

[node name="submit_button" type="Button" parent="Scoreboard/ColorRect/分数输入的下矩形"]
layout_mode = 0
offset_left = 168.0
offset_top = 54.0
offset_right = 336.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 21
text = "提交分数"
icon = ExtResource("2_pmbam")
icon_alignment = 1

[node name="前10显示" type="RichTextLabel" parent="Scoreboard/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 104.0
offset_right = 368.0
offset_bottom = 336.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "1                  4:01              122            name1
2                  4:01              122            name1
3                  4:01              122            name1
4                  4:01              122            name1
5                  4:01              122            name1
6                  4:01              122            name1
7                  4:01              122            name1
8                  4:01              122            name1
9                  4:01              122            name1
10                4:01              122            name1"
autowrap_mode = 0

[node name="提示" type="Label" parent="Scoreboard/ColorRect"]
visible = false
layout_mode = 0
offset_left = 88.0
offset_top = 448.0
offset_right = 296.0
offset_bottom = 471.0
theme_override_fonts/font = ExtResource("1_jiob3")
text = "输入名字长度最长为14个半角字符"

[node name="retry_and_back_button" type="Control" parent="Scoreboard"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="retry_button" type="Button" parent="Scoreboard/retry_and_back_button"]
layout_mode = 0
offset_left = 76.0
offset_top = 523.0
offset_right = 280.0
offset_bottom = 579.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 28
text = "重试"
icon = ExtResource("2_pmbam")
icon_alignment = 1

[node name="back_button" type="Button" parent="Scoreboard/retry_and_back_button"]
layout_mode = 0
offset_left = 873.0
offset_top = 523.0
offset_right = 1077.0
offset_bottom = 579.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jiob3")
theme_override_font_sizes/font_size = 28
text = "返回"
icon = ExtResource("2_pmbam")
icon_alignment = 1

[connection signal="pressed" from="Scoreboard/ColorRect/分数输入的下矩形/submit_button" to="Scoreboard" method="_on_submit_button_pressed"]
[connection signal="pressed" from="Scoreboard/retry_and_back_button/retry_button" to="Scoreboard" method="_on_retry_button_pressed"]
[connection signal="pressed" from="Scoreboard/retry_and_back_button/back_button" to="Scoreboard" method="_on_back_button_pressed"]
